assets/styles/links.css
:where(:root) { -webkit-tap-highlight-color: transparent }

a:where([href]),
button:where(:not([disabled])),
summary {
	border-radius:  1px; /* Forces round outline in Safari. */
	cursor:         pointer;
	display:        block;
	outline-offset: var(--enlargement);
	position:       relative;
	will-change:    opacity; /* Fix hover bobble. */

	/* Focus outline. */
	&:focus {
		outline: none;

		&:focus-visible {
			outline-color: var(--color);
			outline-style: solid;
			outline-width: 2px;
		}
	}

	/* Pseudo for clicks, enlarged without shenanigans on parent. */
	&::after {
		background-color:           transparent;
		border-radius:              var(--enlargement);
		content:                    '';
		cursor:                     inherit;
		inset:                      calc(-1 * var(--enlargement));
		pointer-events:             auto;
		position:                   absolute;
		transition-duration:        calc(var(--transition) / 2);
		transition-property:        background-color;
		transition-timing-function: linear;
	}

	&:active::after { background-color: var(--highlight) }

	@media (any-hover: hover) {
		transition-duration:        var(--transition);
		transition-property:        opacity;
		transition-timing-function: linear;

		&:hover { opacity: var(--hover) }
	}
}

/* Inline links. */
:where(dd, dt, figcaption, p, td, th, main li:not(:has(ol, p, section, ul))) {
	:where(s),
	a:where(:not(:has(cite))) {
		/* Rounded caps. */
		--underline--cap: radial-gradient(circle closest-side at center, var(--line, currentcolor) calc(100% - 0.5px), transparent);
		--underline--cap--inset: calc(var(--enlargement) - var(--stroke) / 2);

		--underline--start: var(--underline--cap) var(--underline--cap--inset) / var(--stroke) var(--stroke);
		--underline--end: var(--underline--cap) right var(--underline--cap--inset) center / var(--stroke) var(--stroke);
		--underline--center: linear-gradient(var(--line, currentcolor) var(--stroke), transparent var(--stroke)) var(--enlargement) / calc(100% - 2 * var(--enlargement));

		/* All together now. */
		--underline: var(--underline--start), var(--underline--end), var(--underline--center);

		/* Extra room below the underline */
		--enlargement--underline: calc(var(--enlargement) + var(--stroke) + var(--descender));

		background:                 var(--underline);
		background-position-y:      calc(1cap + var(--enlargement) + var(--descender)); /* Through the `p`. */
		background-repeat:          no-repeat;
		border-radius:              var(--enlargement);
		box-decoration-break:       clone; /* “Restart” inline padding/margin over on wrapped links. */
		display:                    inline;
		margin-inline-end:          calc(-1 * (var(--enlargement) - var(--right)));
		margin-inline-start:        calc(-1 * (var(--enlargement) - var(--left)));
		outline-offset:             initial;
		padding-block-end:          calc(var(--enlargement--underline, var(--enlargement)) - var(--bottom--content)); /* Account for wonky link content box. */
		padding-block-start:        calc(var(--enlargement) - var(--top--content));
		padding-inline-end:         calc(var(--enlargement) - var(--right));
		padding-inline-start:       calc(var(--enlargement) - var(--left));
		transition-duration:        calc(var(--transition) / 2), var(--transition);
		transition-property:        background-color, opacity;
		transition-timing-function: linear;

		/* TODO Fix this with opacity `color-mix`! */

		/* Use background for active highlight, as it might wrap. */
		&::after { content: initial }

		&:where(:not(s)):active { background-color: var(--highlight) }

		/* Stop background at the underline. */
		> :is(code, kbd, samp) { padding-block-end: 0.1em }
	}
}

/* Our “tag” style. */
:where(main) {
	button,
	summary,
	a:where(:has(> cite)) {
		--block:       1cap;
		--inline:      1cap;
		--leading:     1rlh;
		--size:        var(--size--note);
		--weight:      700;
		--gap:         2cap;
		--icon--width: 0.85em;

		inline-size: fit-content;

		> :is(cite, p) {
			background-color:     var(--background);
			border-radius:        var(--stroke);
			color:                var(--color);
			display:              block;
			letter-spacing:       0.05em;
			margin-block:         calc(-1 * var(--block));
			max-inline-size:      27rem; /* Half-ish. */
			outline-color:        var(--color);
			outline-offset:       round(down, calc(-1 * var(--stroke)), var(--rounding));
			outline-style:        solid;
			outline-width:        round(up, var(--stroke), var(--rounding));
			padding-block:        var(--block);
			padding-inline-end:   calc(var(--gap, 0rem) + var(--icon--width, 0rem) + var(--inline) - var(--right));
			padding-inline-start: calc(var(--inline) - var(--left));
			text-box:             trim-both cap alphabetic;
		}

		/* TODO Otherwise collapses down! Not sure why.  */
		&:where(a, button, summary) {
			margin-block:  calc(-1 * var(--block));
			padding-block: var(--block);
		}

		/* TODO Consolidate these! */
		> cite {
			position: relative;

			> :is(code, kbd, samp) {
				background-color:  initial;
				font-size:         inherit;
				inset-block-start: -0.1em;
				position:          relative;
			}

			&::after {
				content:           var(--icon, '↓');
				inset-block-start: var(--block);
				inset-inline-end:  calc(var(--inline) - var(--right));
				position:          absolute;
				text-box:          trim-both cap alphabetic;
			}
		}

		&:where(summary, button) {
			--gap: 1cap;

			-webkit-user-select: none;
			user-select:         none;

			/* `before` to not foul link tap area. */
			&::before {
				content:           var(--icon);
				inset-block-start: var(--block);
				inset-inline-end:  calc(var(--inline) - var(--right));
				position:          absolute;
				text-box:          trim-both cap alphabetic;
			}
		}

		&:where(summary) {
			--icon:        '+';
			--icon--width: 0.75em;
		}

		&:where(button) {
			--icon:        '🔀';
			--icon--width: 1em;
		}

		&:where([href]:not([href^='/'])) {
			--icon:        '→';
			--icon--width: 1em;

			> cite {
				background-color: var(--color);
				color:            var(--background);
			}
		}

		&:where([href$='.pdf']) {
			--icon:        '⤓';
			--icon--width: 1em;
		}
	}

	details[open] :where(summary) { --icon: '−' }

	:is(li, p):where(:has(> a > cite)) {
		padding-block-start: calc(1rcap - 1cap); /* Back on baseline. */

		&:where(li, p:only-child) > :where(a:has(> cite)) { inline-size: initial } /* To the grid. */

		/* With additional text after (Markdown adds the `br`). */
		&:has(> br) {
			padding-block-end: 1rcap;

			/* “Push” the additional text back down to the (half) baseline. */
			> :where(a:has(> cite)) { margin-block-end: calc((1cap - 2rcap) + 1rlh) }

			/* TODO This is ever-so-slightly off still. */

			> br { display: none } /* Link is already `block`. */
		}
	}
}

/* TODO Move `cite` itself to a component? There is no `:global()` though. */

